removed scrollbar, fixed font issue + weight on chrome

--- a/src/style.css
+++ b/src/style.css
@@ -100,6 +100,11 @@ canvas {
   }
 }
 
+/* hide page scrollbar */
+html { scrollbar-width: none; } /* Firefox */
+body { -ms-overflow-style: none; } /* IE and Edge */
+body::-webkit-scrollbar, body::-webkit-scrollbar-button { display: none; } 
+
 main {
   width: 100vw;
   color: var(--light-text);
@@ -118,7 +123,7 @@ h2,
 h3,
 blockquote {
   font-family: spaceShardsItalic;
-  font-weight: 700;
+  font-weight: normal;
   font-style: normal;
 }
 
